feat: minish lab potion 8m and 32m native impl

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
   assets:
     - assets/models/magika/magika.onnx
     - assets/models/miniLmL6V2/miniLmL6V2.onnx
+    - assets/models/minishLab/potion32m.onnx
     - assets/models/msmarcoMiniLmL6V3/msmarcoMiniLmL6V3.onnx
     - assets/models/sileroVad/silero_vad.onnx
     - assets/models/whisper/whisper_tiny.onnx
