--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,13 @@
-# See https://www.dartlang.org/guides/libraries/private-files
+# Ignore all ONNX model files
+*.onnx
 
-# Files and directories created by pub
+# Ignore the restore script
+restore_models.sh
+
+# Flutter/Dart specific ignores
 .dart_tool/
-.packages
-build/
-# If you're building an application, you may want to check-in your pubspec.lock
-pubspec.lock
-
-# Directory created by dartdoc
-# If you don't generate documentation locally you can remove this line.
-doc/api/
-
-# dotenv environment variables file
-.env*
-
-# dsstore
-.DS_Store
-
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
+build/
+pubspec.lock
