--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -40,6 +40,7 @@ definitions:
     instance_type: windows_x2
     max_build_duration: 60 # minutes.
   env_versions: &env_versions
+    flutter: stable
     xcode: latest
     cocoapods: 1.16.2
     java: 17
